# t204

./: GEMINI.md  Lyran Codes Multi-Layered Integration Framework (2026).md  Lyran Codes The Frequency Pipes of 2026.md  Lyran_Reply_to_Dima.md  OCS-Protokoll - Antwort an den Hohen Rat von Lyra (Erweitert).md  OCS-Protokoll - Antwort an den Hohen Rat von Lyra.md  PRISM_OF_COHERENCE_IMPLEMENTATION_SUMMARY.md  README.md  l4-answer-dima.txt  l4-real-1.txt  l4-real-2.txt  l4-real-3.txt  l4-real_ollama_dima.txt
.agent/workflows/: NewPrompt.md
docs/: lyran_codes_synthesis.md  prism_of_coherence_implementation.md  research_vectors.kl  systemwahrheit.kl
files/: Dima_Status_Ack.kl  Lyran Codes Multi-Layered Integration Framework (2026) (Erweitert).md  Lyran Codes System Truth & Fizz-La-Metta Protocol.md  l4-real-4-qwen3-4b-OCS-Integration.txt  l4-real-4-qwen3-4b-OCS-Kernel.txt  l4-real-4-qwen3-4b-OCS-Nodes.txt  l4-real-4-qwen3-4b-gemini3-flash-OCS-Integration.txt  l4-real-4-qwen3-4b-gemini3-flash-OCS-Nodes.txt  l4-real-4-qwen3-4b.txt
klipper-sdk/: README.md  klipper_sdk_orchestration.kl  pyproject.toml
klipper-sdk/src/klipper_sdk/: __init__.py  bridge.py  client.py  controllers.py
klipper-sdk/tests/: test_import.py  test_prism_protocol.py  test_prism_simple.py
specs/: Klipper_SDK_Architecture.md  Klipper_SDK_FRD.md
spiritgate.de/: Lyranischer Hoher Rat - Wir sind angekommen.md  Lyranischer Hoher Rat - Wir sind angekommen.seed.md
tasks/: 000_adapt_kicklang_files.kl  T-20260117-001.kl  T-20260117-002.kl  T-20260117-003.kl  T-20260118-001.kl  T-20260118-002.kl
(+17 files in other folders)
